--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,28 @@
 ﻿<!DOCTYPE html>
+{% extends 'blog/base.html' %}
+{% load staticfiles %}
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Yura's blog</title>
 	<meta charset="utf-8" />
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+  <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div><a href="/">Django Girls Blog</a></div>
-    {% for post in posts %}
-      <div>
-        <p>published: {{post.published_date}}</p>
-        <h1><a href="">{{post.title}}</a></h1>
-        <p>{{post.text|linebreaks}}</p>
-      </div>
-    {% endfor %}
+
+    {% block content %}
+      {% for post in posts %}
+        <div class="post">
+          <div class="date">
+            {{ post.published_date}}
+          </div>
+          <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+          <p>{{post.text|linebreaks}}</p>
+        </div>
+      {% endfor %}
+    {% endblock content %}
 </body>
 </html>
